# safe-rip

./: .gitignore  Cargo.toml  README.md
src/: fs_utils.rs  main.rs  trash.rs
