[package]
name = "rip"
version = "1.0.0"
edition = "2025"
description = "Safe rm alternative — moves files to trash instead of permanent deletion"
authors = ["Farid Hassani"]
license = "MIT"
repository = "https://github.com/faridhassani95/rip"
keywords = ["cli", "trash", "rm", "safe-delete"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
urlencoding = "2.1"
walkdir = "2.5"
dirs-next = "2.0"
nanoid = "0.4"